--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
@@ -488,35 +488,37 @@
         margin-top: -130px;
         margin-left: 190px;
     }
+
     .carousel-indicators{
         margin-left: -0%;
         
-     }
+    }
  
     .carousel-control-prev{
         margin-left: -2%;
-     }
+    }
  
     .carousel-control-next{
         margin-left: -180%;        
-     }
+    }
 }
 //samsung
 @media only screen and (min-width:376px) and (max-width: 414px){
     .mobileBanner{
         margin-top: 15%;
-        margin-left: 0%;
+        //margin-left: 0%;
+        width: 370px;
     }
 
     .video{
-        img{ width: 100%;
+        img{ width: 85%;
             height: 200px;
             margin-left: 12.5%;
             border-radius: 20px;
         }
 
         iframe{
-            width: 300px;
+            width: 85%;
             height: 200px;
             margin-left: 12.5%;
             border-radius: 20px;
@@ -558,7 +560,7 @@
     }
 
     .carousel-indicators{
-       margin-left: 12.5%;
+       margin-left: 22.5%;
     }
 
     .carousel-control-prev{
@@ -566,94 +568,14 @@
 
     }
 
-    .carousel-control-next-icon{
-        margin-left: -10%;
-
+    .carousel-control-next{
+        margin-left: 70%;        
     }
 }
-
-//tablette
-@media  only screen and (min-width: 413px) and (max-width: 540px){
-    .mobileBanner{
-        margin-top: 12.5%;
-        margin-left: 2%;
-    }
-
-    .video{
-        img{ width: 0px;
-            height: 200px;
-            margin-left: 2%;
-            border-radius: 20px;
-        }
-
-        iframe{
-            width: 150px;
-            height: 200px;
-            margin-left: 2%;
-            border-radius: 20px;
-        }
-
-    }
-}
-@media  only screen and (min-width: 541px) and (max-width: 912px){
-    .mobileBanner{
-        margin-top: 12.5%;
-        margin-left: 2%;
-    }
-
-    .video{
-        img{ width: 0px;
-            height: 200px;
-            margin-left: 2%;
-            border-radius: 20px;
-        }
-
-        iframe{
-            width: 150px;
-            height: 200px;
-            margin-left: 2%;
-            border-radius: 20px;
-        }
-
-    }
-}
-@media only screen and (min-width: 537px) and (max-width: 767px) {
-    // .mission-content {
-    //     padding: 20px;
-    //     max-width: 100%;
-
-    //     .section-title {
-    //         margin-bottom: 25px;
-
-    //         &.text-left {
-    //             text-align: left !important;
-    //         }
-    //     }
-    //     h3 {
-    //         margin-bottom: 13px;
-    //         padding-bottom: 13px;
-    //         font-size: 18px;
-    //         line-height: 1.6;
-    //     }
-    // }
-    .video{
-        img{ width: 580px;
-            height: 300px;
-            margin-left: 11.7%;
-            border-radius: 20px;
-        }
-
-        iframe{
-            width: 583px;
-            height: 300px;
-            margin-left: 11.7%;
-            border-radius: 20px;
-        }
-
-    }
-
+//ipad mini
+@media only screen and (min-width:415px) and (max-width: 768px){
     .type{
-        font-size: 40px;
+        font-size: 35px;
         font-weight: 900;
         color: rgb(218, 5, 5);
         margin-left: 10px;
@@ -672,19 +594,224 @@
         background-repeat:repeat;
         animation-iteration-count: infinite;
     }
-
-    @keyframes ann {
-        0%   {background-color:rgb(255, 255, 255); left:0px; top:0px;}
-        100%   {background-color:rgb(255, 255, 255); left:0px; top:-85px;}
+    .mobileBanner{
+        margin-top: 100px;
+        //margin-left: 30px;
+        width: 950px;
+        //height: max-content;
     }
-
+    .carousel-item{      
+        .video{
+           // width: max-content;
+           width: 67.5%;
+           height: 400px;
+            img{ width: 100%;
+                height: 100%;
+                margin-left: 12.5%;
+                border-radius: 20px;
+            }
+    
+            iframe{
+                width: 100%;
+                height: 100%;
+                margin-left: 12.5%;
+                border-radius: 20px;
+            }
+    
+        }
+    }
     #playIcon{
         position: absolute;
-        margin-top: -180px;
-        margin-left: 350px;
+        margin-top: -130px;
+        margin-left: 190px;
+    }
+    .carousel-indicators{
+        margin-left: -0%;       
+    } 
+    .carousel-control-prev{
+        margin-left: -2%;
+    }
+    .carousel-control-next-icon{
+        margin-left: -190%;        
     }
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+//ipad
+@media only screen and (min-width:769px) and (max-width: 820px){
+    .type{
+        font-size: 35px;
+        font-weight: 900;
+        color: rgb(218, 5, 5);
+        margin-left: 10px;
+    }
+    .ann{
+        width: 400px;
+        height: 30px;
+        background-color: rgb(255, 255, 255);
+        animation-timing-function: linear;
+        position: relative;
+        animation-name: ann;
+        animation-duration: 3s;
+        animation-direction: normal;
+        animation-play-state: running;
+        animation-delay: 0s;
+        background-repeat:repeat;
+        animation-iteration-count: infinite;
+    }
+    .mobileBanner{
+        margin-top: 100px;
+        //margin-left: 30px;
+        width: 950px;
+        //height: max-content;
+    }
+    .carousel-item{      
+        .video{
+           // width: max-content;
+           width: 67.5%;
+           height: 400px;
+            img{ width: 100%;
+                height: 100%;
+                margin-left: 12.5%;
+                border-radius: 20px;
+            }
+    
+            iframe{
+                width: 100%;
+                height: 100%;
+                margin-left: 12.5%;
+                border-radius: 20px;
+            }
+    
+        }
+    }
+    #playIcon{
+        position: absolute;
+        margin-top: -130px;
+        margin-left: 190px;
+    }
+    .carousel-indicators{
+        margin-left: -0%;       
+    } 
+    .carousel-control-prev{
+        margin-left: -2%;
+    }
+    .carousel-control-next-icon{
+        margin-left: -190%;        
+    }
+}
+
+//tablette
+// @media  only screen and (min-width: 413px) and (max-width: 540px){
+//     .mobileBanner{
+//         margin-top: 12.5%;
+//         margin-left: 2%;
+//     }
+
+//     .video{
+//         img{ width: 0px;
+//             height: 200px;
+//             margin-left: 2%;
+//             border-radius: 20px;
+//         }
+
+//         iframe{
+//             width: 150px;
+//             height: 200px;
+//             margin-left: 2%;
+//             border-radius: 20px;
+//         }
+
+//     }
+// }
+// @media  only screen and (min-width: 541px) and (max-width: 912px){
+//     .mobileBanner{
+//         margin-top: 12.5%;
+//         margin-left: 2%;
+//     }
+
+//     .video{
+//         img{ width: 0px;
+//             height: 200px;
+//             margin-left: 2%;
+//             border-radius: 20px;
+//         }
+
+//         iframe{
+//             width: 150px;
+//             height: 200px;
+//             margin-left: 2%;
+//             border-radius: 20px;
+//         }
+
+//     }
+// }
+// @media only screen and (min-width: 537px) and (max-width: 767px) {
+//     // .mission-content {
+//     //     padding: 20px;
+//     //     max-width: 100%;
+
+//     //     .section-title {
+//     //         margin-bottom: 25px;
+
+//     //         &.text-left {
+//     //             text-align: left !important;
+//     //         }
+//     //     }
+//     //     h3 {
+//     //         margin-bottom: 13px;
+//     //         padding-bottom: 13px;
+//     //         font-size: 18px;
+//     //         line-height: 1.6;
+//     //     }
+//     // }
+//     .video{
+//         img{ width: 85%;
+//             height: 200px;
+//             margin-left: 11.7%;
+//             border-radius: 20px;
+//         }
+
+//         iframe{
+//             width: 85%;
+//             height: 200px;
+//             margin-left: 11.7%;
+//             border-radius: 20px;
+//         }
+
+//     }
+
+//     .type{
+//         font-size: 40px;
+//         font-weight: 900;
+//         color: rgb(218, 5, 5);
+//         margin-left: 10px;
+//     }
+//     .ann{
+//         width: 400px;
+//         height: 30px;
+//         background-color: rgb(255, 255, 255);
+//         animation-timing-function: linear;
+//         position: relative;
+//         animation-name: ann;
+//         animation-duration: 3s;
+//         animation-direction: normal;
+//         animation-play-state: running;
+//         animation-delay: 0s;
+//         background-repeat:repeat;
+//         animation-iteration-count: infinite;
+//     }
+
+//     @keyframes ann {
+//         0%   {background-color:rgb(255, 255, 255); left:0px; top:0px;}
+//         100%   {background-color:rgb(255, 255, 255); left:0px; top:-85px;}
+//     }
+
+//     #playIcon{
+//         position: absolute;
+//         margin-top: -180px;
+//         margin-left: 350px;
+//     }
+// }
+@media only screen and (min-width: 769px) and (max-width: 991px) {
 
     .mission-content {
         max-width: 720px;
