--- a/src/app/components/pages/home-page-one/homeone-about/homeone-about.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-about/homeone-about.component.scss
@@ -225,6 +225,64 @@
     }
 }
 
+
+
+
+//iphone8
+@media screen and (max-width: 375px){
+    .about-area{
+        width: 80%;
+        .default-btn {
+            //margin-top: 0px;
+            width: 180px;
+            height: 50px;
+           // margin-right: 20px;
+            font-size:15px;
+            display: inline-block;
+           // margin: 0 10px;
+            i{
+                width: 20px;
+            }
+        }
+    }
+}
+//iphone 12 pro
+@media screen and (min-width: 376px) and (max-width: 390px){
+    .about-area{
+        width: 80%;
+        .default-btn {
+            //margin-top: 0px;
+            width: 180px;
+            height: 50px;
+           // margin-right: 20px;
+            font-size:15px;
+            display: inline-block;
+           // margin: 0 10px;
+            i{
+                width: 20px;
+            }
+        }
+
+    }
+}
+@media only screen and (min-width:391px) and (max-width: 414px){
+    .about-area{
+        width: 80%;
+        .default-btn {
+            //margin-top: 0px;
+            width: 180px;
+            height: 50px;
+           // margin-right: 20px;
+            font-size:15px;
+            display: inline-block;
+           // margin: 0 10px;
+            i{
+                width: 20px;
+            }
+        }
+
+    }
+}
 @media only screen and (max-width: 412px) {
 
     .about-area{
@@ -363,14 +421,30 @@
     }
 
 }
-
 @media  only screen and (min-width: 413px) and (max-width: 540px){
     .about-area{
-        margin-top: 20%;
+        width: 80%;
+        .default-btn {
+            //margin-top: 0px;
+            width: 180px;
+            height: 50px;
+           // margin-right: 20px;
+            font-size:15px;
+            display: inline-block;
+           // margin: 0 10px;
+            i{
+                width: 20px;
+            }
+        }
+
     }
     .about-image {
+        //display: none;
+        width: 350px;
+        height: 200px;
         margin-top: -200px;
-        margin-left: 150px;
+        margin-left: 600px;
+        
         margin-bottom:0%;
         padding: {
             right: 0;
@@ -378,10 +452,11 @@
         };
         display: inline-block;
         img {
+            //display: inline-block;
             margin-top: 50px;
-            margin-left: -15px;
-            width: 250px;
-            height: 200px;
+            //margin-left: 850px;
+            width: 100%;
+            height: 100%;
 
            /* &:nth-child(2) {
                 position: relative;
@@ -392,6 +467,7 @@
     }
     .about-content {
         margin-top: 30px;
+        width: 400px;
         padding-left: 0;
        // text-align: center;
         display: inline-block;
@@ -500,96 +576,52 @@
         }
     }
 }
-//iphone8
-@media screen and (max-width: 375px){
-    .about-area{
-        width: 80%;
-        .default-btn {
-            //margin-top: 0px;
-            width: 180px;
-            height: 50px;
-           // margin-right: 20px;
-            font-size:15px;
-            display: inline-block;
-           // margin: 0 10px;
-            i{
-                width: 20px;
-            }
-        }
+@media only screen and (min-width:541px) and (max-width: 820px){
+    .about-content{
+        
+        h3{ font-size: 70px; } 
+        
     }
 }
-//iphone 12 pro
-@media screen and (min-width: 376px) and (max-width: 390px){
-    .about-area{
-        width: 80%;
-        .default-btn {
-            //margin-top: 0px;
-            width: 180px;
-            height: 50px;
-           // margin-right: 20px;
-            font-size:15px;
-            display: inline-block;
-           // margin: 0 10px;
-            i{
-                width: 20px;
-            }
-        }
-
-    }
-}
-
 @media only screen and (min-width:376px) and (max-width: 414px){
     .about-area{
-        width: 80%;
-        .default-btn {
-            //margin-top: 0px;
-            width: 180px;
-            height: 50px;
-           // margin-right: 20px;
-            font-size:15px;
-            display: inline-block;
-           // margin: 0 10px;
-            i{
-                width: 20px;
-            }
-        }
-
+        margin-top: 1000px;
     }
 }
 
-@media  only screen and (min-width: 413px) and (max-width: 912px){
-    .about-area{
-        margin-top: 0%;
-    }
-    .about-image{
-        width: 42.5%;
-    }
+// @media  only screen and (min-width: 413px) and (max-width: 912px){
+//     .about-area{
+//         margin-top: 0%;
+//     }
+//     .about-image{
+//         width: 42.5%;
+//     }
 
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
+// }
+// @media only screen and (min-width: 576px) and (max-width: 767px) {
 
-    // .about-area {
-    //     .container-fluid {
-    //         max-width: 540px;
-    //     }
-    // }
-    // .about-image {
-    //     padding: {
-    //         right: 100px;
-    //         bottom: 50px;
-    //     };
-    //     img {
-    //         width: auto;
+//     // .about-area {
+//     //     .container-fluid {
+//     //         max-width: 540px;
+//     //     }
+//     // }
+//     // .about-image {
+//     //     padding: {
+//     //         right: 100px;
+//     //         bottom: 50px;
+//     //     };
+//     //     img {
+//     //         width: auto;
 
-    //         &:nth-child(2) {
-    //             position: absolute;
-    //             right: 0;
-    //             margin-top: 0;
-    //         }
-    //     }
-    // }
+//     //         &:nth-child(2) {
+//     //             position: absolute;
+//     //             right: 0;
+//     //             margin-top: 0;
+//     //         }
+//     //     }
+//     // }
 
-}
+// }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 
     .about-area {
@@ -653,7 +685,6 @@
 
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-
 }
 @media only screen and (min-width: 1200px) and (max-width: 1275px) {
 }
@@ -662,7 +693,6 @@
         display: none;
     }
 }
-
 @media only screen and (min-width: 536px) and (max-width: 767px){
     .about-image {
         text-align:right;
@@ -791,7 +821,6 @@
         font-size: large;
     }
 }
-
 @media  screen and (min-width: 768px ) and (max-width: 960px) {
     .about-image {
         text-align:right;
