--- a/src/app/components/pages/home-page-one/home-page-one.component.scss
+++ b/src/app/components/pages/home-page-one/home-page-one.component.scss
@@ -382,8 +382,6 @@ button {
       display: none;
     }
 }
-
-
 @media only screen and (min-width: 376px) and (max-width: 414px){
   .about{
     margin-top: 80px;
@@ -411,15 +409,56 @@ button {
     font-weight: bold;
   }
 } 
+@media  only screen and (min-width: 413px) and (max-width: 540px){
+  .about{
+    margin-top: 0px;
+    margin-bottom: 50px;
+  }
+}
+@media only screen and (min-width:541px) and (max-width: 768px){
+  .clients{
+    .sub-title{
+      font-size: 35px;
+    }
+  }
 
-@media  only screen and (min-width: 413px) and (max-width: 912px){
-  .head{
-    display: block;
+  .about{
+    margin-top: -400px;
+  }
+}
+@media only screen and (min-width:769px) and (max-width: 820px){
+  .clients{
+    .sub-title{
+      font-size: 35px;
+    }
+  }
+
+  .about{
+    margin-top: -0px;
+    margin-bottom: 30px;
+  }
+
+  .sm{
+    display: none;
+  }
+}
+@media only screen and (min-width:821px) and (max-width: 912px){
+  .about{
+    margin-top: -550px;
+    margin-bottom: 50px;
   }
   .sm{
     display: none;
   }
 }
+// @media  only screen and (min-width: 413px) and (max-width: 912px){
+//   .head{
+//     display: block;
+//   }
+//   .sm{
+//     display: none;
+//   }
+// }
 .sub-title {
   margin-top: -45px;
   text-transform: uppercase;
