--- a/src/app/components/pages/clients/clients.component.scss
+++ b/src/app/components/pages/clients/clients.component.scss
@@ -278,18 +278,85 @@
     
     .mobileClients{
       display: block;
-      margin-top: -20px;
+      margin-top: -30px;
       .carousel-item{
-        width: 220px;
+        width: 200px;
         // margin-left: auto;
         // margin-right: auto;
         img{
           width: 100%;
           //display: block;
-          margin-left: 30px;
+          margin-left: 50px;
         }
       
       }
       
+    }
+  }
+
+  @media only screen and (min-width:415px) and (max-width: 768px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -30px;
+      .carousel-item{
+        width: 300px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 175px;
+        }
+      
+      }
+      
+    }
+  }
+
+  @media only screen and (min-width:769px) and (max-width: 820px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -30px;
+      .carousel-item{
+        width: 350px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 175px;
+        }
+      
+      }     
+    }
+  }
+
+  @media only screen and (min-width:821px) and (max-width: 912px){
+    .liste{
+      display: none;
+    }
+    
+    .mobileClients{
+      display: block;
+      margin-top: -40px;
+      .carousel-item{
+        width: 450px;
+        // margin-left: auto;
+        // margin-right: auto;
+        img{
+          width: 100%;
+          //display: block;
+          margin-left: 175px;
+        }
+      
+      }     
     }
   }
